syntax = "proto3";

package media;

service MediaProtoService {
  rpc GetFiles (GetRequest) returns (GetResponse);
  rpc UploadFiles (stream FileChunk) returns (UploadResponse);
  rpc GetPresignedUrl (PresignedUrlRequest) returns (PresignedUrlResponse);
}

message FileChunk {
  string file_name = 1;
  string content_type = 2;
  bytes chunk_data = 3;
  string id = 4;
  string pathOrContainer = 5;
  FileType file_type = 6;
}

message UploadResponse {
  repeated UploadedFile files = 1;
}

message UploadedFile {
  string file_name = 1;
  string container = 2;
}

message GetRequest {
  string id = 1;
  FileType file_type = 2;
}

message GetResponse {
  repeated FileModel files = 1;
}

message FileModel {
  string id = 1;
  string name = 2;
  string path = 3;
}

message PresignedUrlRequest {
  string file_name = 1;
  string content_type = 2;
}

message PresignedUrlResponse {
  string upload_url = 1;
  string file_url = 2;
}

enum FileType {
  UNKNOWN = 0;
  POST_IMAGE = 1;
  PROFILE_IMAGE = 2;
  REELS_VIDEO = 3;
}
